--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>gmm</title>
 		<style>
-		body { font-family: bookman old style }
+		body { font-family: bookman old style; calibri; }
 		h1, h2 { color: #B22222; }
 		p { color: #8B4513;
 		font-size: 19px; }
