--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>gmm</title>
-		<link rel="stylesheet" href="styleindex2.css">
+		<link rel="stylesheet" href="index2externo.css">
 		<style>
 		p { font-size: 19px; }
 		</style>
