--- a/index4musicas.html
+++ b/index4musicas.html
@@ -3,7 +3,7 @@
 		<title>gmm - músicas</title>
 	</head>
 	<body>
-		<h1>algumas músicas que eu gosto são:</h1>
+		<h1>algumas músicas que eu gosto</h1>
 		<ul>
 			<li><a href="https://www.youtube.com/watch?v=iMq3lQFFHFw" target="_blank">beautiful crime - tamer</a></li>
 			<li><a href="https://www.youtube.com/watch?v=EtRIz7VocNs" target="_blank">cherry wine - hozier</a></li>
