--- a/index4.html
+++ b/index4.html
@@ -35,10 +35,10 @@
 		</ul>
 		<h1 id="coisas legais">coisas que eu gosto</h1>
 		<ul>
-			<li><a href="https://mgabim.github.io/progweb/index4musicas.html"></a>músicas</li>
-			<li><a href="https://mgabim.github.io/progweb/index4seriesfilmes.html"></a>séries e filmes</li>
-			<li><a href="https://mgabim.github.io/progweb/index4livros.html"></a>livros</li>
-			<li><a href="https://mgabim.github.io/progweb/index4animesmangas.html"></a>animes e mangás</li>
+			<li><a href="https://mgabim.github.io/progweb/index4musicas.html">músicas</a></li>
+			<li><a href="https://mgabim.github.io/progweb/index4seriesfilmes.html">séries e filmes</a></li>
+			<li><a href="https://mgabim.github.io/progweb/index4livros.html">livros</a></li>
+			<li><a href="https://mgabim.github.io/progweb/index4animesmangas.html">animes e mangás</a></li>
 		</ul>
 		<h1 id="extras">extras</h1>
 		<ul>
