--- a/index4.2.html
+++ b/index4.2.html
@@ -52,10 +52,10 @@
 			</ul>
 			<h1 id="coisas legais">coisas legais</h1>
 			<ul>
-				<li><a href="https://mgabim.github.io/progweb/index4musicas.html">músicas</a></li>
-				<li><a href="https://mgabim.github.io/progweb/index4seriesfilmes.html">séries e filmes</a></li>
-				<li><a href="https://mgabim.github.io/progweb/index4livros.html">livros</a></li>
-				<li><a href="https://mgabim.github.io/progweb/index4animesmangas.html">animes e mangás</a></li>
+				<li><a href="https://mgabim.github.io/progweb/index4.2.musicas.html">músicas</a></li>
+				<li><a href="https://mgabim.github.io/progweb/index4.2.seriesfilmes.html">séries e filmes</a></li>
+				<li><a href="https://mgabim.github.io/progweb/index4.2.livros.html">livros</a></li>
+				<li><a href="https://mgabim.github.io/progweb/index4.2.animesmangas.html">animes e mangás</a></li>
 			</ul>
 			<h1 id="extras">extras</h1>
 			<ul>
