--- a/index4.2.html
+++ b/index4.2.html
@@ -5,9 +5,8 @@
                 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 		body { background-color: green; margin: 0; font-family: 'ubuntu', sans-serif; font-size: 20px; }
 		header { background-color: white; }
-		div { background-color: white; margin: 20px; padding: 10px; }
+		div, footer { background-color: white; margin: 20px; padding: 10px; }
 		h1 { margin: 10px; }
-		footer { background-color: white; padding: 5px; }
 		nav { display: flex; justify-content: space-between; }
 		nav>h2, footer>figure { margin: 6px; }
 		nav>ul>li { display: inline; }
