--- a/formulario.html
+++ b/formulario.html
@@ -6,7 +6,9 @@
 	<title>coelhinho, se eu fosse como tu...</title>
 </head>
 <body>
-	<form>
+	<form action="https://formsubmit.co/471972mmmm39482910@gmail.com" method="POST">
+		<input type="hidden" name="_captcha" value="false">
+		<input type="hidden" name="_next" value="https://yourdomain.co/valeu.html">
 		<label for="nome">escreva seu nome:</label>
 <br>
 		<input type="text" name="nome" placeholder="nome">
@@ -19,16 +21,14 @@
 <br>
 		<input type="email" name="email" placeholder="email (pra spam)">
 <br><br>
-		<div>
 		<fieldset>
 			<legend>agora me diz, é bonito ser feio?</legend>
 			<input type="radio" name="feio" value="sim" checked>sim
 			<input type="radio" name="feio" value="não">não
 			<input type="radio" name="feio" value="talvez">mano, assim, depende tlgd
 		</fieldset>
-		</div>
+
 <br>
-		<div>
 		<fieldset>
 			<legend>quais das séries abaixo você já assistiu?</legend>
 			<input type="checkbox" name="serie" value="dd">demolidor (disney+)
@@ -37,9 +37,7 @@
 			<input type="checkbox" name="serie" value="ofmd">our flag means death (hbo)
 			<p style="margin: 2px">(não conhece alguma dessas séries? pesquise.)</p>
 		</fieldset>
-		</div>
 <br>
-		<div>
 		<fieldset>
 			<legend>selecione seu herói favorito do universo marvel:</legend>
 			<select id="marvel favorito">
@@ -55,14 +53,11 @@
 			</select>
 			<p style="margin: 2px">(seu herói da marvel favorito não está aqui? significa que seu gosto é ruim :D)</p>
 		</fieldset>
-		</div>
 <br>
-		<div>
 		<fieldset>
 			<legend>me conte sua melhor piada:</legend>
 			<textarea rows="4"></textarea>
 		</fieldset>
-		</div>
 <br>
 		<input type="submit" value="enviar">
 	</form>
