--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,7 @@
 <body>
 	<form action="https://formsubmit.co/471972mmmm39482910@gmail.com" method="POST">
 		<input type="hidden" name="_captcha" value="false">
-		<input type="hidden" name="_next" value="https://yourdomain.co/fvaleu.html">
+		<input type="hidden" name="_next" value="https://mgabim.github.io/progweb/fvaleu.html">
 		<label for="nome">escreva seu nome:</label>
 <br>
 		<input type="text" name="nome" placeholder="nome">
