--- a/formulario.html
+++ b/formulario.html
@@ -40,7 +40,7 @@
 <br>
 		<fieldset>
 			<legend>selecione seu herói favorito do universo marvel:</legend>
-			<select id="marvel favorito">
+			<select id="marvel favorito" name="marvel favorito">
 				<option selected disabled value="">selecione</option>
 				<option>deadpool</option>
 				<option>demolidor</option>
@@ -56,7 +56,7 @@
 <br>
 		<fieldset>
 			<legend>me conte sua melhor piada:</legend>
-			<textarea rows="4"></textarea>
+			<textarea rows="4" name="piada"></textarea>
 		</fieldset>
 <br>
 		<input type="submit" value="enviar">
