--- a/formulario.html
+++ b/formulario.html
@@ -11,7 +11,7 @@
 		<input type="hidden" name="_next" value="https://mgabim.github.io/progweb/fvaleu.html">
 		<label for="nome">escreva seu nome:</label>
 <br>
-		<input type="text" name="nome" placeholder="nome">
+		<input type="text" name="nome" placeholder="nome" required>
 <br><br>
 		<label for="apelido">o apelido mais engraçado que já te deram:</label>
 <br>
@@ -56,7 +56,7 @@
 <br>
 		<fieldset>
 			<legend>me conte sua melhor piada:</legend>
-			<textarea rows="4" name="piada"></textarea>
+			<textarea rows="4" name="piada" required></textarea>
 		</fieldset>
 <br>
 		<input type="submit" value="enviar">
