--- a/fvaleu.html
+++ b/fvaleu.html
@@ -4,6 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>vlw</title>
+	<style>
+	body { background-color: #C6DEC5; }
+	h1 { color: #86A352; }
+	</style>
 </head>
 <body>
 	<center>
