--- a/ddd.html
+++ b/ddd.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-   <head> 
-        <meta charset="utf-8"/>
-	<title>cidades</title>
-	</head>
-  <body>
-	<form action="">
-		<h2>Adicione um DDD</h2>
-			<input type="text" id="ddd" placeholder="DDD" size="1">
-        </form>
-	<ul> </ul>
-	<script src="DDDcidade.js"></script>
-    <br>
-    <br>
-  </body>
-</html>
+ <html>
+ 
+ <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>DDD para Cidades</title>
+ </head>
+ 
+ <body>
+    <form action="">
+       <label for="ddd">Digite um DDD</label><br>
+       <input type="text" id="ddd" placeholder="ex: 27" name="ddd">
+       <h1>Cidades com o DDD </h1>
+       <ul class="ul">
+       </ul>
+    </form>
+    <script src="script.js"></script>
+ </body>
+ 
+ </html>
