--- a/titulo.html
+++ b/titulo.html
@@ -5,16 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title></title>
-  <style>
-    p {font-size : 138% } li {font-size : 150%}
-  </style> 
-  <link rel="stylesheet" href="listacss.css">
 </head>
   <body>
     <div>	  
       <center> <h1 style="color: blue">olá!</h1> </center>
     </div>
 	  <p style="color: light blue">seja bem-vindo(a)!</p>
-   <script src="javabutton.js"></script>
+   <script src="titulo.js"></script>
   </body>
 </html>
