--- a/titulo.html
+++ b/titulo.html
@@ -8,9 +8,9 @@
 </head>
   <body>
     <div>	  
-      <center> <h1 style="color: blue">olá!</h1> </center>
+      <center> <h1 style="color: blue">OLÁ!</h1> </center>
     </div>
-	  <p style="color: light blue">seja bem-vindo(a)!</p>
+	  <p style="color: light-blue">seja bem-vindo(a)!</p>
    <script src="titulo.js"></script>
   </body>
 </html>
