--- a/titulo.html
+++ b/titulo.html
@@ -6,11 +6,13 @@
   <meta name="viewport" content="width=device-width">
   <title></title>
 </head>
-  <body>
-    <div>	  
-      <center> <h1 style="color: blue">OLÁ!</h1> </center>
-    </div>
-	  <p style="color: light-blue">seja bem-vindo(a)!</p>
-   <script src="titulo.js"></script>
-  </body>
+<body>
+  <div>	  
+    <center> <h1 style="color: blue">OLÁ!</h1> </center>
+  </div>
+  <div>
+    <center> <p style="color: light-blue">seja bem-vindo(a)!</p> <center>
+  </div>
+  <script src="titulo.js"></script>
+</body>
 </html>
