--- a/titulo.html
+++ b/titulo.html
@@ -11,7 +11,7 @@
     <center> <h1 style="color: blue">OLÁ!</h1> </center>
   </div>
   <div>
-    <center> <p style="color: light-blue">seja bem-vindo(a)!</p> <center>
+    <center> <h3 style="color: blue">seja bem-vindo(a)!</h3> <center>
   </div>
   <script src="titulo.js"></script>
 </body>
