--- a/jogodedamas.html
+++ b/jogodedamas.html
@@ -10,6 +10,6 @@
   <center>
     <h1>JOGO DE DAMAS</h1>
   </center>    
-  <script src="damas.js"></script>
+  <script src="jogodedamas.js"></script>
 </body>
 </html>
