--- a/ddd.html
+++ b/ddd.html
@@ -15,7 +15,7 @@
        <ul class="ul">
        </ul>
     </form>
-    <script src="script.js"></script>
+    <script src="ddd.js"></script>
  </body>
  
  </html>
